<resources>
    <string name="app_name">Location Alarm</string>
    <string name="latitude">緯度</string>
    <string name="longitude">経度</string>
    <string name="get_location">位置情報取得</string>
    <string name="destination">目的地</string>
    <string name="current_location">現在地</string>
    <string name="distance">距離</string>
    <string name="calc_distance">距離計算</string>
    <string name="kilometer">キロメートル</string>
    <string name="meter">メートル</string>
    <string name="alarm_start">アラーム開始</string>
    <string name="alarm_end">アラーム終了</string>
    <string name="remain">あと</string>
</resources>