<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textCurrent"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="#3D5AFE"
        android:gravity="center"
        android:labelFor="@+id/currentAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/current_location"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/currentAddress"
        app:layout_constraintEnd_toStartOf="@+id/currentAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/currentAddress" />

    <EditText
        android:id="@+id/currentAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textCurrent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDestination"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#3D5AFE"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/destination"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/destinationAddress"
        app:layout_constraintEnd_toEndOf="@+id/textCurrent"
        app:layout_constraintStart_toStartOf="@id/textCurrent"
        app:layout_constraintTop_toTopOf="@+id/destinationAddress" />

    <EditText
        android:id="@+id/destinationAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/currentAddress"
        app:layout_constraintStart_toStartOf="@+id/currentAddress"
        app:layout_constraintTop_toBottomOf="@+id/currentAddress" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#3D5AFE"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/distance"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="@+id/textDestination"
        app:layout_constraintStart_toStartOf="@+id/textDestination"
        app:layout_constraintTop_toTopOf="@+id/distance" />

    <EditText
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textDistanceUnit"
        app:layout_constraintStart_toStartOf="@+id/destinationAddress"
        app:layout_constraintTop_toBottomOf="@+id/destinationAddress"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textDistanceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/distance"
        android:text="@string/kilometer"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="@+id/destinationAddress"
        app:layout_constraintStart_toEndOf="@+id/distance"
        app:layout_constraintTop_toTopOf="@+id/distance" />

    <Button
        android:id="@+id/buttonStartAlarm"
        style="?android:attr/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="startAlarm"
        android:text="@string/alarm_start"
        android:theme="@style/MaterialAlertDialog.Material3"
        app:layout_constraintEnd_toStartOf="@+id/buttonStopAlarm"
        app:layout_constraintStart_toStartOf="@+id/textDistance"
        app:layout_constraintTop_toBottomOf="@+id/distance" />

    <Button
        android:id="@+id/buttonStopAlarm"
        style="?android:attr/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="stopAlarm"
        android:text="@string/alarm_end"
        android:theme="@style/MaterialAlertDialog.Material3"
        app:layout_constraintEnd_toEndOf="@+id/textDistanceUnit"
        app:layout_constraintStart_toEndOf="@+id/buttonStartAlarm"
        app:layout_constraintTop_toTopOf="@+id/buttonStartAlarm" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartAlarm" />

</androidx.constraintlayout.widget.ConstraintLayout>